# rust-fs-squashfs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
include/: fs_squashfs.h
scripts/: build-squashfs-feature-images.sh
src/: capi.rs  decompress.rs  dir.rs  error.rs  fs.rs  inode.rs  lib.rs  lzo1x.rs  metablock.rs  superblock.rs  table.rs
test-disks/: squashfs-basic.meta.txt  squashfs-basic.sqfs
tests/: capi_basic.rs  capi_read.rs  cli.rs  large_files.rs  oracle_compat.rs  roundtrip.rs  stress.rs
tests/common/: mod.rs
